<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/auth_phone_input_layout"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/half_normal_edge"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="@dimen/half_normal_edge"
            android:background="@color/dark_white"
            android:paddingTop="4dp"
            app:boxBackgroundMode="outline"
            app:endIconDrawable="@drawable/ic_input_clear"
            app:endIconMode="clear_text"
            app:hintTextAppearance="@style/HintTextAppearance"
            app:hintTextColor="@color/dark_grey"
            app:layout_constraintBottom_toTopOf="@id/auth_send_code_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.example.viewpager2withtablayout.views.EditTextPicker
                android:id="@+id/auth_phone_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="9dp"
                android:layout_marginTop="5dp"
                android:background="@color/transparent"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textSize="17sp"
                app:mask="+7 (###) ###-##-##" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/auth_send_code_button"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="19dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/receive_code"
            android:textAppearance="@style/SmallHeader"
            android:textColor="@color/dark_grey"
            android:textSize="17sp"
            app:backgroundTint="@color/yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/auth_phone_input_layout" />

        <TextView
            android:id="@+id/auth_sing_up_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/no_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/auth_send_code_button" />

        <TextView
            android:id="@+id/auth_sing_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="7dp"
            android:paddingTop="16dp"
            android:paddingEnd="7dp"
            android:paddingBottom="16dp"
            android:text="@string/create_new"
            android:textColor="@color/clickable_purple_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/auth_sing_up_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>